--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <p class="p2" style="color: antiquewhite;">
           Hi I'm Anandu Anil. I have completed BBA in 2022 from MG UNIVERSITY.It help to acquire management skills and
-          offer great career opportunities. I have 1 year of working experience in Financial field.
+          offer great career opportunities. I have 10 months of working experience in Financial field.
         </p>
         </p>
         <button class="l1">DOWNLOAD CV</button>
