--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body"><strong>2017</strong></div>
+            <div class="accordion-body"><strong>2017 - MGM NSS HSS LAKKATTOOR</strong></div>
           </div>
         </div>
         <div class="accordion-item col-lg-12 col-md-12">
@@ -158,18 +158,18 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body"><strong>SCIENCE-2019</strong></div>
+            <div class="accordion-body"><strong>SCIENCE(2019) - MGM NSS HSS LAKKATTOOR</strong></div>
           </div>
         </div>
         <div class="accordion-item col-lg-12 col-md-12">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              <strong>UG</strong>
+              <strong>DEGREE</strong>
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body"><strong> BBA-2022</strong></div>
+            <div class="accordion-body"><strong> BBA(2022) - MAR AUGUSTHINOSE COLLEGE,RAMAPURAM</strong></div>
           </div>
         </div>
       </div>
