--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
         </p><br>
 
         <p class="p2" style="color: antiquewhite;">
-          Hi I'm Anandu Anil. I have completed BBA in 2022 from MG UNIVERSITY.It help to acquire management skills and
-          offer great career opportunities. I have 10 months of working experience in Financial field.
+          Hi I'm Anandu Anil. I have completed BBA IN 2022 from MG UNIVERSITY. It help to acquire management skills and more. After that I joined as Relationship Officer in Muthoot Microfin for 10 months.
         </p>
         </p>
         <button class="l1">DOWNLOAD CV</button>
