--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <br>
       <br>
       <div>
-        <h1 class="text-center exp">Experience</h1>
+        <h1 class="text-center exp">EXPERIENCE</h1>
       </div><br>
       <div class="row">
         <div class="col-lg-6 col-md-12 data"><br>
